--- a/versions/k-/kf5configwidgets.json
+++ b/versions/k-/kf5configwidgets.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "d358c1d15a130826b91973c8f9a5e5e1f597f3be",
+      "version": "5.81.0",
+      "port-version": 0
+    },
+    {
       "git-tree": "3169cdbc37782f7578a4ec6bc8a93630eeb21bcd",
       "version-string": "5.75.0",
       "port-version": 0
