[fontconfig] Fix x86-osx -> arm64-osx cross-compilation.

--- a/versions/f-/fontconfig.json
+++ b/versions/f-/fontconfig.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "7b8de891f5ef8e60bb971e2d7af4b7687537d3d3",
+      "version-string": "2.13.1",
+      "port-version": 8
+    },
+    {
       "git-tree": "e28c20718e723ea702e408f52f76343950b1a3f2",
       "version-string": "2.13.1",
       "port-version": 7
