use uuid targets

--- a/ports/azure-storage-cpp/unofficial-azure-storage-cppConfig.cmake.in
+++ b/ports/azure-storage-cpp/unofficial-azure-storage-cppConfig.cmake.in
@@ -11,8 +11,8 @@ endif()
 if ("@OpenSSL_FOUND@")
 	find_dependency(OpenSSL REQUIRED)
 endif()
-if ("@libuuid_FOUND@")
-	find_dependency(libuuid CONFIG REQUIRED)
+if ("@unofficial-libuuid_FOUND@")
+	find_dependency(unofficial-libuuid CONFIG REQUIRED)
 endif()
 if ("@cpprestsdk_FOUND@")
 	find_dependency(cpprestsdk CONFIG REQUIRED)
