--- a/ports/portmidi/CONTROL
+++ b/ports/portmidi/CONTROL
@@ -1,5 +1,5 @@
 Source: portmidi
-Version: 0.234
+Version: 0.234-1
 Homepage: https://sourceforge.net/projects/portmedia/
 Description: Free, cross-platform, open-source I/O library for MIDI
-Supports: windows&!uwp&!arm
+Supports: windows&osx&!uwp&!arm
