--- a/versions/o-/onnx.json
+++ b/versions/o-/onnx.json
@@ -1,8 +1,8 @@
 {
   "versions": [
     {
-      "git-tree": "4cb086e3a03dd42d9cb575b127e5ccda7d28c0a2",
-      "version": "1.9.0",
+      "git-tree": "dedcc28eeb27b1bbab0ddac0d16875067a63318a",
+      "version-semver": "1.9.0",
       "port-version": 0
     }
   ]
