--- a/versions/v-/vcpkg-cmake-config.json
+++ b/versions/v-/vcpkg-cmake-config.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "279b4eab772c3c922b5880204647079b14f6d349",
+      "version-date": "2021-05-22",
+      "port-version": 2
+    },
+    {
       "git-tree": "330cc51bc99c6b71ed5fb51901f6f838684015a5",
       "version-date": "2021-05-22",
       "port-version": 1
