--- a/versions/v-/vcpkg-cmake-config.json
+++ b/versions/v-/vcpkg-cmake-config.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "dd7d67c81c2442c831a298d136b019a2bd138565",
+      "version-date": "2021-08-18",
+      "port-version": 0
+    },
+    {
       "git-tree": "b3abb12ba8ab43770aea4e5a8d4915319bd295ee",
       "version-date": "2021-08-11",
       "port-version": 0
