[vcpkg_cmake_config_fixup] Revert #19469

--- a/versions/v-/vcpkg-cmake-config.json
+++ b/versions/v-/vcpkg-cmake-config.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "d8d456b1bcb549dd05dbc3265e28b54b2d5e851a",
+      "version-date": "2021-08-11",
+      "port-version": 1
+    },
+    {
       "git-tree": "b3abb12ba8ab43770aea4e5a8d4915319bd295ee",
       "version-date": "2021-08-11",
       "port-version": 0
