[boost-build] try to update to 1.77.0

--- a/ports/boost-modular-build-helper/CMakeLists.txt
+++ b/ports/boost-modular-build-helper/CMakeLists.txt
@@ -203,6 +203,8 @@ add_custom_target(boost ALL
         -sBOOST_ROOT=${BOOST_BUILD_PATH}
         -sBOOST_BUILD_PATH=${BOOST_BUILD_PATH}
         --debug-configuration
+        --debug-building
+        --debug-generators
         --ignore-site-config
         --hash
         -q
