--- a/ports/libipc/CONTROL
+++ b/ports/libipc/CONTROL
@@ -1,4 +1,5 @@
 Source: libipc
 Version: 1.0
 Description: C++ IPC Library: A high-performance inter-process communication using shared memory on Linux/Windows.
+Supports: !osx
 Homepage: https://github.com/mutouyun/cpp-ipc
