--- a/ports/tiff/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/tiff/vcpkg-cmake-wrapper.cmake.in
@@ -1,7 +1,6 @@
 cmake_policy(PUSH)
 cmake_policy(SET CMP0057 NEW)
 set(_tiff_find_args "${ARGS}")
-set(_tiff_features "@FEATURES@")
 set(_tiff_link_libraries "")
 set(_tiff_libraries "")
 set(_tiff_incomplete FALSE)
@@ -9,7 +8,7 @@ set(_tiff_find_options "")
 if("REQUIRED" IN_LIST ARGS)
     list(APPEND _tiff_find_options "REQUIRED")
 endif()
-if("webp" IN_LIST _tiff_features)
+if(@webp@)
     find_package(WebP CONFIG ${_tiff_find_options})
     if(WebP_FOUND)
         list(APPEND _tiff_link_libraries WebP::WebP)
@@ -18,7 +17,7 @@ if("webp" IN_LIST _tiff_features)
         set(_tiff_incomplete TRUE)
     endif()
 endif()
-if("lzma" IN_LIST _tiff_features)
+if(@lzma@)
     find_package(LibLZMA CONFIG ${_tiff_find_options})
     if(LibLZMA_FOUND)
         list(APPEND _tiff_link_libraries LibLZMA::LibLZMA)
@@ -27,7 +26,7 @@ if("lzma" IN_LIST _tiff_features)
         set(_tiff_incomplete TRUE)
     endif()
 endif()
-if("jpeg" IN_LIST _tiff_features)
+if(@jpeg@)
     find_package(JPEG ${_tiff_find_options})
     if(JPEG_FOUND)
         list(APPEND _tiff_link_libraries JPEG::JPEG)
@@ -36,7 +35,7 @@ if("jpeg" IN_LIST _tiff_features)
         set(_tiff_incomplete TRUE)
     endif()
 endif()
-if("zstd" IN_LIST _tiff_features)
+if(@zstd@)
     find_package(ZSTD CONFIG ${_tiff_find_options})
     if(ZSTD_FOUND)
         if(TARGET zstd::libzstd_shared)
@@ -50,7 +49,7 @@ if("zstd" IN_LIST _tiff_features)
         set(_tiff_incomplete TRUE)
     endif()
 endif()
-if("zip" IN_LIST _tiff_features)
+if(@zlib@)
     find_package(ZLIB ${_tiff_find_options})
     if(ZLIB_FOUND)
         list(APPEND _tiff_link_libraries ZLIB::ZLIB)
@@ -79,7 +78,6 @@ else()
     endif()
 endif()
 unset(_tiff_find_args)
-unset(_tiff_features)
 unset(_tiff_link_libraries)
 unset(_tiff_libraries)
 unset(_tiff_incomplete)
