Set CMP0012 to allow 'if(ON)'

--- a/ports/tiff/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/tiff/vcpkg-cmake-wrapper.cmake.in
@@ -1,4 +1,5 @@
 cmake_policy(PUSH)
+cmake_policy(SET CMP0012 NEW)
 cmake_policy(SET CMP0057 NEW)
 set(_tiff_find_args "${ARGS}")
 set(_tiff_link_libraries "")
