[kf5configwidgets] update versions

--- a/versions/k-/kf5configwidgets.json
+++ b/versions/k-/kf5configwidgets.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "b34bf15ac6a0f0da6bb0156661f73693e37d42ab",
+      "version-semver": "5.84.0",
+      "port-version": 0
+    },
+    {
       "git-tree": "d358c1d15a130826b91973c8f9a5e5e1f597f3be",
       "version": "5.81.0",
       "port-version": 0
