--- a/scripts/buildsystems/msbuild/vcpkg.targets
+++ b/scripts/buildsystems/msbuild/vcpkg.targets
@@ -1,53 +1,82 @@
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" TreatAsLocalProperty="VcpkgConfigSubdir;_ZVcpkgCurrentInstalledDir;VcpkgNormalizedConfiguration">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" TreatAsLocalProperty="VcpkgInstalledDir;VcpkgManifestRoot;VcpkgInstalledDir">
 
   <!-- Import default properties if not done yet. This does not overwrite any previously defined properties. -->
   <Import Condition="'$(VcpkgPropsImported)' != 'true'" Project="vcpkg.props" />
 
-  <!-- Define properties derived from those defined in vcpkg.props, in the project file or specified on the command line. -->
-   <PropertyGroup>
-    <!-- Note: Overwrite VcpkgPageSchema with a non-existing path to disable the VcPkg property sheet in your projects -->
-    <VcpkgPageSchema Condition="'$(VcpkgPageSchema)' == ''">$([System.IO.Path]::Combine($(VcpkgRoot), 'scripts\buildsystems\msbuild\vcpkg-general.xml'))</VcpkgPageSchema>
+  <!-- VS2015's version of "vcpkg integrate install" imports both the props and targets together in the "props" area,
+  meaning we have no opportunity to respond to user customizations in their project files. It also means that this
+  .targets must defend against normal properties being unset. (For example, VcpkgPlatformTarget below.) -->
+
+  <!-- Add trailing slashes to inputs that must have them to conform with msbuild conventions. Note that these are in
+  TreatAsLocalProperty to ensure we can add the trailing \ -->
+  <PropertyGroup>
+    <VcpkgRoot Condition="!$(VcpkgRoot.EndsWith('\'))">$(VcpkgRoot)\</VcpkgRoot>
+    <VcpkgManifestRoot Condition="'$(VcpkgManifestRoot)' != '' and !$(VcpkgManifestRoot.EndsWith('\'))">$(VcpkgManifestRoot)\</VcpkgManifestRoot>
+    <VcpkgInstalledDir Condition="'$(VcpkgInstalledDir)' != '' and !$(VcpkgInstalledDir.EndsWith('\'))">$(VcpkgInstalledDir)\</VcpkgInstalledDir>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(VcpkgEnabled)' == 'true'">
-    <!-- Triplet defining platform, OS, and linkage -->
-    <VcpkgLinkage />
-    <VcpkgLinkage Condition="'$(VcpkgUseStatic)' == 'true'">-static</VcpkgLinkage>
-    <VcpkgTriplet Condition="'$(VcpkgTriplet)' == ''">$(VcpkgPlatformTarget)-$(VcpkgOSTarget)$(VcpkgLinkage)</VcpkgTriplet>
+  <!-- Determine the triplet to use. Note that $(PlatformTarget) is not available at the top of the .vcxproj file. -->
+  <PropertyGroup Condition="'$(VcpkgOSTarget)' == ''">
+    <VcpkgOSTarget>windows</VcpkgOSTarget>
+    <VcpkgOSTarget Condition="'$(AppContainerApplication)' == 'true'">uwp</VcpkgOSTarget>
+  </PropertyGroup>
 
-    <VcpkgRoot Condition="'$(VcpkgRoot)' != '' and !$(VcpkgRoot.EndsWith('\'))">$(VcpkgRoot)\</VcpkgRoot>
-    <VcpkgManifestRoot Condition="'$(VcpkgManifestRoot)' != '' and !$(VcpkgManifestRoot.EndsWith('\'))">$(VcpkgManifestRoot)\</VcpkgManifestRoot>
+  <PropertyGroup Condition="'$(VcpkgPlatformTarget)' == ''">
+    <VcpkgPlatformTarget>$(Platform)</VcpkgPlatformTarget>
+    <VcpkgPlatformTarget Condition="'$(Platform)' == 'Win32'">x86</VcpkgPlatformTarget>
+  </PropertyGroup>
 
-    <VcpkgInstalledDir Condition="'$(VcpkgInstalledDir)' == '' and '$(VcpkgEnableManifest)' != 'true'">$([System.IO.Path]::Combine($(VcpkgRoot), 'installed'))</VcpkgInstalledDir>
-    <VcpkgInstalledDir Condition="'$(VcpkgInstalledDir)' == '' and '$(VcpkgEnableManifest)' == 'true'">$([System.IO.Path]::Combine($(VcpkgManifestRoot), 'vcpkg_installed'))</VcpkgInstalledDir>
-    <VcpkgInstalledDir Condition="!$(VcpkgInstalledDir.EndsWith('\'))">$(VcpkgInstalledDir)\</VcpkgInstalledDir>
+  <PropertyGroup>
+    <_ZVcpkgLinkage />
+    <_ZVcpkgLinkage Condition="'$(VcpkgUseStatic)' == 'true'">-static</_ZVcpkgLinkage>
+    <VcpkgTriplet Condition="'$(VcpkgTriplet)' == ''">$(VcpkgPlatformTarget)-$(VcpkgOSTarget)$(_ZVcpkgLinkage)</VcpkgTriplet>
+  </PropertyGroup>
 
-    <_ZVcpkgCurrentInstalledDir>$([System.IO.Path]::Combine($(VcpkgInstalledDir), $(VcpkgTriplet)))</_ZVcpkgCurrentInstalledDir>
-    <_ZVcpkgCurrentInstalledDir Condition="!$(_ZVcpkgCurrentInstalledDir.EndsWith('\'))">$(_ZVcpkgCurrentInstalledDir)\</_ZVcpkgCurrentInstalledDir>
-
-    <VcpkgNormalizedConfiguration Condition="$(VcpkgConfiguration.StartsWith('Debug'))">Debug</VcpkgNormalizedConfiguration>
-    <VcpkgNormalizedConfiguration Condition="$(VcpkgConfiguration.StartsWith('Release')) or '$(VcpkgConfiguration)' == 'RelWithDebInfo' or '$(VcpkgConfiguration)' == 'MinSizeRel'">Release</VcpkgNormalizedConfiguration>
-
-    <VcpkgConfigSubdir Condition="'$(VcpkgNormalizedConfiguration)' == 'Debug'">debug\</VcpkgConfigSubdir>
-    <VcpkgApplocalDeps Condition="'$(VcpkgApplocalDeps)' == ''">true</VcpkgApplocalDeps>
-
-    <_ZVcpkgHostTripletParameter Condition="'$(VcpkgHostTriplet)' != ''">"--host-triplet=$(VcpkgHostTriplet)"</_ZVcpkgHostTripletParameter>
-    <_ZVcpkgExecutable>$([System.IO.Path]::Combine($(VcpkgRoot), 'vcpkg.exe'))</_ZVcpkgExecutable>
-
+  <!-- Include the triplet in ProjectStateLine to force VS2017 and later to fully rebuild if the user changes it.  -->
+  <PropertyGroup>
     <ProjectStateLine>VcpkgTriplet=$(VcpkgTriplet):$(ProjectStateLine)</ProjectStateLine>
   </PropertyGroup>
 
-  <!-- Import property page 'Vcpkg' -->
-  <ItemGroup Condition="'$(VcpkgPageSchema)' != '' and exists('$(VcpkgPageSchema)')">
+  <!-- Determine the locations trees we want to consume. VcpkgInstalledDir is special in that it doesn't have a default
+  value in the .props because we normally derive it, but users may override the value. -->
+  <Choose>
+    <When Condition="'$(VcpkgEnableManifest)' == 'true'">
+      <PropertyGroup>
+        <VcpkgInstalledDir Condition="'$(VcpkgInstalledDir)' == ''">$(VcpkgManifestRoot)vcpkg_installed\$(VcpkgTriplet)\</VcpkgInstalledDir>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <VcpkgInstalledDir Condition="'$(VcpkgInstalledDir)' == ''">$(VcpkgRoot)installed\</VcpkgInstalledDir>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+
+  <PropertyGroup>
+    <_ZVcpkgCurrentInstalledDir>$(VcpkgInstalledDir)\$(VcpkgTriplet)\</_ZVcpkgCurrentInstalledDir>
+    <_ZVcpkgNormalizedConfiguration Condition="$(VcpkgConfiguration.StartsWith('Debug'))">Debug</_ZVcpkgNormalizedConfiguration>
+    <_ZVcpkgNormalizedConfiguration Condition="$(VcpkgConfiguration.StartsWith('Release')) or '$(VcpkgConfiguration)' == 'RelWithDebInfo' or '$(VcpkgConfiguration)' == 'MinSizeRel'">Release</_ZVcpkgNormalizedConfiguration>
+
+    <_ZVcpkgConfigSubdir Condition="'$(_ZVcpkgNormalizedConfiguration)' == 'Debug'">debug\</_ZVcpkgConfigSubdir>
+    <_ZVcpkgExecutable>$(VcpkgRoot)vcpkg.exe</_ZVcpkgExecutable>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <!-- Note: Overwrite VcpkgPageSchema with a non-existing path to disable the VcPkg property sheet in your projects -->
+    <VcpkgPageSchema Condition="'$(VcpkgPageSchema)' == ''">$(VcpkgRoot)scripts\buildsystems\msbuild\vcpkg-general.xml</VcpkgPageSchema>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(VcpkgPageSchema)' != '' and exists('$(VcpkgPageSchema)') and '$(MSBuildToolsVersion)' != '14.0'">
     <PropertyPageSchema Include="$(VcpkgPageSchema)">
       <Context>Project</Context>
     </PropertyPageSchema>
   </ItemGroup>
 
+  <!-- Install settings to get headers and import libs for the currently selected _ZVcpkgCurrentInstalledDir -->
   <ItemDefinitionGroup Condition="'$(VcpkgEnabled)' == 'true'">
     <Link>
-      <AdditionalDependencies Condition="'$(VcpkgAutoLink)' != 'false'">%(AdditionalDependencies);$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)lib\*.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)lib;$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)lib\manual-link</AdditionalLibraryDirectories>
+      <AdditionalDependencies Condition="'$(VcpkgAutoLink)' != 'false'">%(AdditionalDependencies);$(_ZVcpkgCurrentInstalledDir)$(_ZVcpkgConfigSubdir)lib\*.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories);$(_ZVcpkgCurrentInstalledDir)$(_ZVcpkgConfigSubdir)lib;$(_ZVcpkgCurrentInstalledDir)$(_ZVcpkgConfigSubdir)lib\manual-link</AdditionalLibraryDirectories>
     </Link>
     <ClCompile>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories);$(_ZVcpkgCurrentInstalledDir)include</AdditionalIncludeDirectories>
@@ -70,16 +99,34 @@
     <Message Text="Not using Vcpkg because VcpkgEnabled is &quot;$(VcpkgEnabled)&quot;"
              Importance="Normal" Condition="'$(VcpkgEnabled)' != 'true'"/>
     <Message Text="Vcpkg is unable to link because we cannot decide between Release and Debug libraries. Please define the property VcpkgConfiguration to be 'Release' or 'Debug' (currently '$(VcpkgConfiguration)')."
-             Importance="High" Condition="'$(VcpkgEnabled)' == 'true' and '$(VcpkgNormalizedConfiguration)' == ''"/>
+             Importance="High" Condition="'$(VcpkgEnabled)' == 'true' and '$(_ZVcpkgNormalizedConfiguration)' == ''"/>
   </Target>
 
-  <PropertyGroup Condition="'$(VcpkgEnabled)' == 'true'">
-    <_ZVcpkgManifestFileLocation>$(VcpkgManifestRoot)vcpkg.json </_ZVcpkgManifestFileLocation>
+  <Choose>
+    <When Condition="'$(VcpkgHostTriplet)' != ''">
+      <PropertyGroup>
+        <_ZVcpkgHostTripletParameter>"--host-triplet=$(VcpkgHostTriplet)"</_ZVcpkgHostTripletParameter>
+        <_ZVcpkgHostTripletSuffix>$(VcpkgHostTriplet).</_ZVcpkgHostTripletSuffix>
+      </PropertyGroup>
+    </When>
+    <Otherwise>
+      <PropertyGroup>
+        <_ZVcpkgHostTripletParameter />
+        <_ZVcpkgHostTripletSuffix />
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+
+  <PropertyGroup>
+    <_ZVcpkgManifestFileLocation>$(VcpkgManifestRoot)vcpkg.json</_ZVcpkgManifestFileLocation>
     <_ZVcpkgConfigurationFileLocation>$(VcpkgManifestRoot)vcpkg-configuration.json</_ZVcpkgConfigurationFileLocation>
 
-    <_ZVcpkgTLogFileLocation>$(TLogLocation)VcpkgInstallManifest$(VcpkgTriplet).$(VcpkgHostTriplet).read.1u.tlog</_ZVcpkgTLogFileLocation>
-    <_ZVcpkgMSBuildStampFile>$(VcpkgInstalledDir).msbuildstamp-$(VcpkgTriplet).$(VcpkgHostTriplet).stamp</_ZVcpkgMSBuildStampFile>
+    <!-- Note that we put these in VcpkgInstalledDir rather than somewhere like $(TLogLocation) because we want
+    multiple .vcxprojs to be able to share the same up-to-date checks. -->
+    <_ZVcpkgMSBuildStampFile>$(VcpkgInstalledDir).msbuildstamp-$(VcpkgTriplet).$(_ZVcpkgHostTripletSuffix)stamp</_ZVcpkgMSBuildStampFile>
+    <_ZVcpkgTLogFileLocation>$(VcpkgInstalledDir)VcpkgInstallManifest$(VcpkgTriplet).$(_ZVcpkgHostTripletSuffix)read.1u.tlog</_ZVcpkgTLogFileLocation>
   </PropertyGroup>
+
   <ItemGroup Condition="'$(VcpkgEnabled)' == 'true'">
     <_ZVcpkgInstallManifestDependenciesInputs Include="$(_ZVcpkgManifestFileLocation)"/>
     <_ZVcpkgInstallManifestDependenciesInputs Include="$(_ZVcpkgConfigurationFileLocation)" Condition="Exists('$(_ZVcpkgConfigurationFileLocation)')"/>
@@ -93,12 +140,8 @@
           Inputs="@(_ZVcpkgInstallManifestDependenciesInputs)"
           Outputs="@(_ZVcpkgInstallManifestDependenciesOutputs)">
     <Message Text="Installing vcpkg dependencies to $(VcpkgInstalledDir)" Importance="High" />
-    <MakeDir Directories="$(TLogLocation)" />
-    <ItemGroup>
-      <_ZVcpkgItemToDelete Include="$(TLogLocation)VcpkgInstallManifest*.read.1u.tlog" />
-      <_ZVcpkgItemToDelete Include="$(VcpkgInstalledDir).msbuildstamp-*" />
-    </ItemGroup>
-    <Delete Files="@(_ZVcpkgItemToDelete)" />
+    <MakeDir Directories="$(VcpkgInstalledDir)" />
+    <Delete Files="$(_ZVcpkgMSBuildStampFile);$(_ZVcpkgTLogFileLocation)" />
     <Message Text="%22$(_ZVcpkgExecutable)%22 install $(_ZVcpkgHostTripletParameter) --x-wait-for-lock --triplet %22$(VcpkgTriplet)%22 --vcpkg-root %22$(VcpkgRoot)\%22 %22--x-manifest-root=$(VcpkgManifestRoot)\%22 %22--x-install-root=$(VcpkgInstalledDir)\%22 $(VcpkgAdditionalInstallOptions)"
           Importance="High" />
     <Exec Command="%22$(_ZVcpkgExecutable)%22 install $(_ZVcpkgHostTripletParameter) --x-wait-for-lock --triplet %22$(VcpkgTriplet)%22 --vcpkg-root %22$(VcpkgRoot)\%22 %22--x-manifest-root=$(VcpkgManifestRoot)\%22 %22--x-install-root=$(VcpkgInstalledDir)\%22 $(VcpkgAdditionalInstallOptions)"
@@ -118,40 +161,40 @@
           Condition="'$(VcpkgEnabled)' == 'true' and '$(VcpkgApplocalDeps)' == 'true' and '$(LinkSkippedExecution)' != 'true'">
     <Message Text="[vcpkg] Starting VcpkgApplocalDeps" Importance="low" />
     <PropertyGroup>
-      <_VcpkgAppLocalPowerShellCommonArguments>-ExecutionPolicy Bypass -noprofile -File "$(MSBuildThisFileDirectory)applocal.ps1" "$(TargetPath)" "$(_ZVcpkgCurrentInstalledDir)$(VcpkgConfigSubdir)bin" "$(TLogLocation)$(ProjectName).write.1u.tlog" "$(IntDir)vcpkg.applocal.log"</_VcpkgAppLocalPowerShellCommonArguments>
+      <_ZVcpkgAppLocalPowerShellCommonArguments>-ExecutionPolicy Bypass -noprofile -File "$(MSBuildThisFileDirectory)applocal.ps1" "$(TargetPath)" "$(_ZVcpkgCurrentInstalledDir)$(_ZVcpkgConfigSubdir)bin" "$(TLogLocation)$(ProjectName).write.1u.tlog" "$(IntDir)vcpkg.applocal.log"</_ZVcpkgAppLocalPowerShellCommonArguments>
     </PropertyGroup>
     <!-- Search %PATH% for pwsh.exe if it is available. -->
     <Exec
-      Command="pwsh.exe $(_VcpkgAppLocalPowerShellCommonArguments)"
+      Command="pwsh.exe $(_ZVcpkgAppLocalPowerShellCommonArguments)"
       StandardOutputImportance="Normal"
       StandardErrorImportance="Normal"
       IgnoreExitCode="true"
       UseCommandProcessor="false">
       <Output TaskParameter="ExitCode"
-              PropertyName="_VcpkgAppLocalExitCode" />
+              PropertyName="_ZVcpkgAppLocalExitCode" />
     </Exec>
     <!-- Fall back to well known system PowerShell location otherwise. -->
     <Message Text="[vcpkg] Failed to run applocal.ps1 using pwsh, falling back to system PowerShell." Importance="low"
-             Condition="$(_VcpkgAppLocalExitCode) == 9009" />
+             Condition="$(_ZVcpkgAppLocalExitCode) == 9009" />
     <Exec
-      Command="%22$(SystemRoot)\System32\WindowsPowerShell\v1.0\powershell.exe%22 $(_VcpkgAppLocalPowerShellCommonArguments)"
+      Command="%22$(SystemRoot)\System32\WindowsPowerShell\v1.0\powershell.exe%22 $(_ZVcpkgAppLocalPowerShellCommonArguments)"
       StandardOutputImportance="Normal"
       StandardErrorImportance="Normal"
       IgnoreExitCode="true"
       UseCommandProcessor="false"
-      Condition="$(_VcpkgAppLocalExitCode) == 9009">
+      Condition="$(_ZVcpkgAppLocalExitCode) == 9009">
       <Output TaskParameter="ExitCode"
-              PropertyName="_VcpkgAppLocalExitCode" />
+              PropertyName="_ZVcpkgAppLocalExitCode" />
     </Exec>
     <!-- We're ignoring the above exit codes, so translate into a warning if both failed. -->
-    <Warning Text="[vcpkg] Failed to gather app local DLL dependencies, program may not run. Set VcpkgApplocalDeps to false in your project file to suppress this warning. PowerShell arguments: $(_VcpkgAppLocalPowerShellCommonArguments)"
-      Condition="$(_VcpkgAppLocalExitCode) != 0"/>
+    <Warning Text="[vcpkg] Failed to gather app local DLL dependencies, program may not run. Set VcpkgApplocalDeps to false in your project file to suppress this warning. PowerShell arguments: $(_ZVcpkgAppLocalPowerShellCommonArguments)"
+      Condition="$(_ZVcpkgAppLocalExitCode) != 0"/>
     <ReadLinesFromFile File="$(IntDir)vcpkg.applocal.log"
-      Condition="$(_VcpkgAppLocalExitCode) == 0">
+      Condition="$(_ZVcpkgAppLocalExitCode) == 0">
       <Output TaskParameter="Lines" ItemName="VcpkgAppLocalDLLs" />
     </ReadLinesFromFile>
-    <Message Text="@(VcpkgAppLocalDLLs,'%0A')" Importance="Normal" Condition="$(_VcpkgAppLocalExitCode) == 0" />
-    <ItemGroup Condition="$(_VcpkgAppLocalExitCode) == 0">
+    <Message Text="@(VcpkgAppLocalDLLs,'%0A')" Importance="Normal" Condition="$(_ZVcpkgAppLocalExitCode) == 0" />
+    <ItemGroup Condition="$(_ZVcpkgAppLocalExitCode) == 0">
       <ReferenceCopyLocalPaths Include="@(VcpkgAppLocalDLLs)" />
     </ItemGroup>
   </Target>
