--- a/versions/r-/rappture.json
+++ b/versions/r-/rappture.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "60e81e8dadd5a897185da4296ffc4bcf913d5352",
+      "version": "1.9",
+      "port-version": 1
+    },
+    {
       "git-tree": "1bff8b135623078465252ff2d940407537851f2a",
       "version-string": "1.9",
       "port-version": 0
