libharu: Fix renaming library when build type is either release or debug
Co-authored-by: Phoebe <20694052+PhoebeHui@users.noreply.github.com>

--- a/ports/libharu/CONTROL
+++ b/ports/libharu/CONTROL
@@ -1,5 +1,6 @@
 Source: libharu
-Version: 2017-08-15-9
+Version: 2017-08-15
+Port-Version: 10
 Homepage: https://github.com/libharu/libharu
 Description: libharu - free PDF library
 Build-Depends: zlib, libpng
