--- a/ports/libgit2/CONTROL
+++ b/ports/libgit2/CONTROL
@@ -1,5 +1,6 @@
 Source: libgit2
 Version: 1.1.0
+Port-Version: 1
 Homepage: https://github.com/libgit2/libgit2
 Build-Depends: zlib, http-parser
 Description: Git linkable library
