[libuv] Add new source file epoll.c

--- a/ports/libuv/CMakeLists.txt
+++ b/ports/libuv/CMakeLists.txt
@@ -23,6 +23,7 @@ file(GLOB UV_SOURCES_UNIX
     src/unix/thread.c
     src/unix/tty.c
     src/unix/udp.c
+    src/unix/epoll.c
 )
 file(GLOB UV_SOURCES_LINUX
     src/unix/proctitle.c
