[onnx] feature: foxi
* https://github.com/houseroad/foxi
    * install the project's copyright (MIT)
* pytorch requires `foxi_loader`

The CMake target will be renamed to `onnxifi_*` for convenience.

--- a/versions/o-/onnx.json
+++ b/versions/o-/onnx.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "ea25f2179598a99237671a57e2b57d0554c7ecb0",
+      "version-semver": "1.9.0",
+      "port-version": 1
+    },
+    {
       "git-tree": "b53c9c9e969928def925c57ea5ddcdfb09293693",
       "version-semver": "1.9.0",
       "port-version": 0
