--- a/ports/lz4/CMakeLists.txt
+++ b/ports/lz4/CMakeLists.txt
@@ -53,5 +53,5 @@ file(STRINGS "lib/lz4.h" LZ4_H REGEX "^#define LZ4_VERSION_(MAJOR|MINOR|RELEASE)
 string(REGEX REPLACE "^.*MAJOR +([0-9]+).*MINOR +([0-9]+).*RELEASE +([0-9]+).*$" "\\1.\\2.\\3" VERSION "${LZ4_H}")
 set(INCLUDEDIR [[${prefix}/include]])
 set(LIBDIR [[${prefix}/lib]])
-configure_file(lib/liblz4.pc.in lib/lz4.pc)
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/lib/lz4.pc" DESTINATION "lib/pkgconfig")
+configure_file(lib/liblz4.pc.in lib/liblz4.pc)
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/lib/liblz4.pc" DESTINATION "lib/pkgconfig")
