OpenSSL unused on 'Darwin'

--- a/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
+++ b/ports/libarchive/vcpkg-cmake-wrapper.cmake.in
@@ -18,7 +18,7 @@ endif()
 if(@ENABLE_ZSTD@)
     find_dependency(zstd)
 endif()
-if(@ENABLE_OPENSSL@)
+if(@ENABLE_OPENSSL@ AND NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
     find_dependency(OpenSSL)
 endif()
 if(@ENABLE_LZO@)
@@ -57,7 +57,7 @@ if("@VCPKG_LIBRARY_LINKAGE@" STREQUAL "static")
             list(APPEND LibArchive_LIBRARIES zstd::libzstd_static)
         endif(TARGET zstd::libzstd_shared)
     endif()
-    if(@ENABLE_OPENSSL@)
+    if(@ENABLE_OPENSSL@ AND NOT CMAKE_SYSTEM_NAME MATCHES "Darwin")
         list(APPEND LibArchive_LIBRARIES OpenSSL::Crypto)
     endif()
 
