[boost-locale] force found-iconv on osx

--- a/ports/boost-locale/b2-options.cmake.in
+++ b/ports/boost-locale/b2-options.cmake.in
@@ -34,7 +34,7 @@ if(BOOST_LOCALE_ENABLE_ICONV)
         -sICONV_PATH=${CURRENT_INSTALLED_DIR}
     )
 
-    if(VCPKG_CMAKE_SYSTEM_NAME STREQUAL "Emscripten" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "wasm32")
+    if(VCPKG_TARGET_IS_OSX OR VCPKG_CMAKE_SYSTEM_NAME STREQUAL "Emscripten" OR VCPKG_TARGET_ARCHITECTURE STREQUAL "wasm32")
         list(APPEND B2_OPTIONS
             boost.locale.force-found-iconv=on
         )
